CSS, fix recycled cards not showing

--- a/p1/css/style.css
+++ b/p1/css/style.css
@@ -2,7 +2,7 @@
     padding-top: 200px;
 }
 
-#player, #dealer {
+#player, #dealer, #actions, #stats {
     padding-top: 50px;
 }
 .pokerTable {
@@ -27,7 +27,22 @@ body {
 }
 
 .score {
+    display: block;
+    height: 60px;
+    width: 60px;
+    line-height: 60px;
+    border-radius: 50%;
+    background-color: white;
+    color: black;
+    text-align: center;
     font-size: 2em;
+    margin-top: -1em;
+    border: solid 2px;
+    z-index: 2;
+}
+
+.bet {
+    margin-top: 20px;
 }
 
 /** chip CSS from https://codepen.io/yakovd33/pen/jbbbPM */
@@ -58,3 +73,17 @@ body {
 .stacked {
     margin-left: -90px;
 }
+
+/** Card animations and transitions - https://vuejs.org/v2/guide/transitions.html */
+.slide-fade-enter-active {
+    transition: all .3s ease;
+  }
+  .slide-fade-leave-active {
+    /* transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0); */
+    transition: all .3s ease;
+  }
+  .slide-fade-enter, .slide-fade-leave-to
+  /* .slide-fade-leave-active below version 2.1.8 */ {
+    transform: translateX(10px);
+    opacity: 0;
+  }
